Fix range slider input on ie11

--- a/src/components/range-choice/_input.scss
+++ b/src/components/range-choice/_input.scss
@@ -71,6 +71,9 @@
   background: $answer-label-background-color;
   height: 16px;
 }
+.control input[type='range']::-ms-tooltip {
+  display: none;
+}
 .control input[type='range']:focus::-ms-fill-lower {
   background: $answer-background-color;
 }
